[project]
name = "filenamelength"
version = "1.1.0"
description = "Admin options to work with the max length of the name of your files"
authors = [
    {name = "turulomio",email = "turulomio@yahoo.es"}
]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "colorama >=0.4.6",
    "pydicts >=1.1.0"
]

[tool.poetry]

[tool.poetry.scripts]
filenamelength='filenamelength.filenamelength:main'

[tool.poetry.group.dev.dependencies]
poethepoet = ">=0.39.0"
poetry = ">=2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
release = { script = "filenamelength.poethepoet:release" }
translate = { script = "filenamelength.poethepoet:translate" }
